--- a/two-buttons/package.json
+++ b/two-buttons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-practice1",
+  "name": "two-buttons",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,18 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.11.2",
-    "vue": "^3.0.11"
+    "core-js": "^3.11.3",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
-    "@vue/compiler-sfc": "^3.0.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.9.0",
-    "vue-loader-v16": "^16.0.0-beta.5.4"
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
@@ -27,7 +26,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/essential",
       "eslint:recommended"
     ],
     "parserOptions": {
